fix: fix .toc__li on mobile

--- a/sass/_bookmarks.scss
+++ b/sass/_bookmarks.scss
@@ -9,7 +9,7 @@
 .bookmarks ul {
   padding-left: 1em;
   margin-top: 0;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 .bookmarks li {
   color: var(--primary-color-accent);
