--- a/sass/_toc.scss
+++ b/sass/_toc.scss
@@ -14,5 +14,9 @@
 }
 .toc__li {
   color: var(--primary-color) !important;
+
+  @media (max-width: 1200px) {
+    margin: 0.3em auto;
+  }
 }
 // .toc__anchor {}
