--- a/sass/_work.scss
+++ b/sass/_work.scss
@@ -9,7 +9,7 @@
 .work ul {
   padding-left: 1em;
   margin-top: 0;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 .work li {
   color: var(--primary-color-accent);
